@@ -37,8 +37,8 @@
   <element value="user"/>
  </cache-parameters>
  <cache-parameters type="Image Portlet">
-  <element value="baseurl"/>
   <element value="protocol"/>
+  <element value="baseurl"/>
  </cache-parameters>
  <cache-parameters type="Internal Links Portlet">
   <element value="user"/>
@@ -60,10 +60,13 @@
   <element value="current_lang"/>
  </cache-parameters>
  <cache-parameters type="Rotating Image Portlet">
+  <element value="protocol"/>
   <element value="baseurl"/>
  </cache-parameters>
  <cache-parameters type="Search Portlet">
-  <element value="no-cache"/>
+  <element value="protocol"/>
+  <element value="baseurl"/>
+  <element value="current_lang"/>
  </cache-parameters>
  <cache-parameters type="Text Portlet"/>
  <object name="portlet_actions_1" meta_type="CPS Portlet"
