@@ -10,6 +10,8 @@ Bug fixes
   single class (namespace collision in form)
 - Added "baseurl" parameter to the portlet_conformance_statement definition.
 - Removed now useless profiles file.
+- Added cache to the Search Portlet.
+- Added protocol cache option to the Rotating Image Portlet.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
